--- a/style.css
+++ b/style.css
@@ -5,6 +5,14 @@ body {
     font-size: 2.5rem;
 }
 
+.courier {
+  font-family: Courier;
+}
+
+.cursive {
+  font-family: cursive;
+}
+
 #page {
     overflow: hidden;
     white-space: nowrap;
@@ -27,6 +35,20 @@ body {
     justify-content: center;
     background-color: #ffffff;
     border-right: 1px solid black;
+}
+
+#chatbox {
+  width: 400px;
+  height: 400px;
+  border: 1px black solid;
+  overflow: auto;
+}
+
+.resetters {
+  position: fixed;
+  top: 50px;
+  left: 50px;
+  z-index: 500;
 }
 
 /*
