--- a/style.css
+++ b/style.css
@@ -342,7 +342,7 @@ div::-webkit-scrollbar-track-piece {
   font-size: 1.3rem;
   line-height: 80px;
   vertical-align: middle;
-  margin-left: 20px;
+  margin-left: 40px;
   margin-right: 20px;
   float: right;
 }
@@ -352,4 +352,33 @@ div::-webkit-scrollbar-track-piece {
   left: 150px;
   top: 50%;
   transform: translateY(-50%);
+}
+
+.aboutMe {
+  width: 380px;
+  white-space: normal;
+  font-size: 1rem;
+}
+
+#typeCursor {
+  display: inline-block;
+  vertical-align: middle;
+  width: 1px;
+  height: 15px;
+  background-color: black;
+  animation: blink .75s step-end infinite;
+}
+
+@keyframes blink {
+  from, to {
+    background-color: transparent
+  }
+  50% {
+    background-color: black;
+  }
+}
+
+a {
+  text-decoration: underline;
+  color: black;
 }
