--- a/style-project.css
+++ b/style-project.css
@@ -20,7 +20,7 @@ body {
 }
 
 .pane {
-  flex: 0 0 100vw;
+  flex: 0 0 200vw;
   height: 90vh;
   display: flex;
   position: relative;
@@ -46,7 +46,7 @@ body {
 }
 
 .home {
-  position: relative;
+  position: absolute;
   left: 0;
   top: 0;
   height: inherit;
@@ -59,7 +59,7 @@ body {
 
 #works {
   position: absolute;
-  left: 20px;
+  left: 1800px;
   top: 50%;
   transform: translateY(-50%);
   margin: 0;
@@ -115,13 +115,13 @@ ul {
 #container {
   position: absolute;
   left: 70px;
-  top: 220px;
+  top: 260px;
   font-size: 0.8rem;
   list-style: none;
 }
 
 .container-child {
-  margin-bottom: 50px;
+  margin-bottom: 30px;
 }
 
 a {
